fix: map not showing

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,3 +3,19 @@
 @tailwind components;
 
 @tailwind utilities;
+
+@import '~sweetalert2/src/sweetalert2';
+
+.mgl-map-wrapper {
+    height: 100%;
+    position: relative;
+    width: 100%;
+}
+
+.mgl-map-wrapper .mapboxgl-map {
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
